# bpa-fetch

./: .gitignore  LICENSE  README.md  bpa_fetch.py  pyproject.toml  requirements.txt
test/: parquet_stats.sql
